# sph-tutorial

./: CMakeLists.txt  README.md
include/: gl-windows.h
shader/: curv.frag  normalFromDepth.frag
src/: gl-windows.cpp  main.cpp
